--- a/css/index.css
+++ b/css/index.css
@@ -11,7 +11,7 @@ li {
   src: url(../font/DS-DIGIT.TTF);
 }
 body {
-  background: url(../images/bg.jpg) no-repeat green;
+  background: url(../images/bg.jpg) no-repeat;
   background-size: cover;
   line-height: 1.15;
   color: white;
