--- a/css/index.less
+++ b/css/index.less
@@ -9,7 +9,7 @@ li{list-style-type: none;}
     src: url(../font/DS-DIGIT.TTF);
 }
 body{
-    background: url(../images/bg.jpg) no-repeat green;
+    background: url(../images/bg.jpg) no-repeat;
     background-size: cover;
     line-height: 1.15;
     color: white;
